--- a/.github/workflows/publish-jar.yml
+++ b/.github/workflows/publish-jar.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@master
+      - name: Fix permissions
+        run: chmod +x ./gradlew
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
           ./gradlew build
